# usaddress

./: .gitignore  .manylinux-install.sh  .pre-commit-config.yaml  .pylintrc  .python-version  .travis.yml  LICENSE  MANIFEST.in  README.md  addrlearning.py  appveyor.yml  build.sh  label_examples.py  pyproject.toml  requirements.txt  setup.py  testing.py  tox.ini  train.py  trainingdataprep.py  usaddr.crfsuite
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  improve-parser.md
.github/workflows/: python-publish.yml
docs/: Makefile  conf.py  index.rst
measure_performance/: measure_performance.py
measure_performance/test_data/: canada.xml  county_road_xx.xml  dealstat_tests_v1.xml  (+9 more)
parse_scripts/: import_osm.py  parse.py  parse_openaddress.py
raw/: LICENSE.md  osm_data_full_addr.xml  us50.test.raw  us50.train.raw
tests/: test_labeling.py  test_manual_labeling.py  test_parsing.py  test_parsing.py~  test_tagging.py  test_token_features.py  test_tokenizing.py  test_xml.py
training/: HC_XXXX.xml  README.md  bad_parse_16_12.xml  canada.xml  county_road_xx.xml  dealstat_addresses_v1.xml  import_osm.py  labeled.xml  manual_labeling.py  measure_performance.py  multi_word_state_addresses.xml  nc_train.xml  new_HC_addresses.xml  new_addresses.xml  parse.py  parse_osm.py  parse_training.py  thesimplemachine_train.xml  training.py  training.py~  unparseable.csv  unparseable.xml  us50_messiest_manual_label.xml  utils.py
training_data/: data_osm_data_full_addr_xml.xml  data_osm_data_street_xml.xml  data_us50_train_tagged.xml  us50.train.tagged
usaddress/: __init__.py  __init__.pyi  __init__.py~  osm_usaddr.crfsuite  usaddr.crfsuite
(+44 files in other folders)
